// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Home Page Matches snapshot in large mobile view 1`] = `
<div>
  <div
    class="sc-fszimp dfnBGm"
  >
    <div
      class="sc-etsjJW ggnOgq"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-fYmhhH qRnIp"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-koBvLg gepkNA"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 3
      </p>
    </div>
    <div
      class="sc-DZJJV fOycTX"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 4
      </p>
    </div>
    <div
      class="sc-kUouGy fgSTVR"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 5
      </p>
    </div>
    <div
      class="sc-bjMIFn htVkrL"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page Matches snapshot in small mobile view 1`] = `
<div>
  <div
    class="sc-bbbBoY fSnIyn"
  >
    <div
      class="sc-cdmAjP hPWYRt"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-jytpVa irsVAg"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-eknHtZ haGIq"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 3
      </p>
    </div>
    <div
      class="sc-pYNGo ijhkAP"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 4
      </p>
    </div>
    <div
      class="sc-cCVJLD jsHJLw"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 5
      </p>
    </div>
    <div
      class="sc-jYczwO fBkcLO"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page Matches snapshot in tablet view 1`] = `
<div>
  <div
    class="sc-fhfEft fYTZru"
  >
    <div
      class="sc-bAehkN hyedll"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-gahYZc dUSyxg"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-bSFBcf gqKCcK"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 3
      </p>
    </div>
    <div
      class="sc-gsJsQu gMNIXH"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 4
      </p>
    </div>
    <div
      class="sc-ibashp SakQv"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 5
      </p>
    </div>
    <div
      class="sc-blIAwI kILnW"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page renders additional videos from useAPI result when scrollbar is at bottom 1`] = `
<div>
  <div
    class="sc-fVHBlr iiYxoB"
  >
    <div
      class="sc-gLaqbQ gImMEA"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-ipUnzB gXfDzC"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-eQwNpu cSvTBg"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 3
      </p>
    </div>
    <div
      class="sc-gvqKNf fPguDv"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 4
      </p>
    </div>
    <div
      class="sc-cOpnSz cnEVnn"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 5
      </p>
    </div>
    <div
      class="sc-kjwdDK ZIZIp"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 6
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page renders videos from useAPI result 1`] = `
<div>
  <div
    class="sc-dTvVRJ dSSsTl"
  >
    <div
      class="sc-hwkwBN jxUKGv"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 1
      </p>
    </div>
    <div
      class="sc-kNOymR iFLlLI"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 2
      </p>
    </div>
    <div
      class="sc-dYwGCk ctcOWF"
    >
      <img
        alt="Thumbnail image"
        class="sc-jJLAfE ldElst"
      />
      <p
        class="sc-jwTyAe eTofHv"
      >
        Video 3
      </p>
    </div>
  </div>
</div>
`;

exports[`Home Page shows error message when hasError is set 1`] = `
<div>
  <div
    class="sc-dntSTA eWlVgx"
  >
    <p>
      API error
    </p>
  </div>
</div>
`;

exports[`Home Page shows loader when isLoading is true 1`] = `
<div>
  <div
    class="sc-eqYatC ezGcFW"
  >
    <div
      class="sc-bRKDuR fMrgJQ"
      role="progressbar"
    >
      <svg
        class="spinner"
        viewBox="0 0 50 50"
      >
        <circle
          class="path"
          cx="25"
          cy="25"
          fill="none"
          r="20"
          stroke-width="5"
        />
      </svg>
    </div>
  </div>
</div>
`;
